# routes/api.php
@@ -5,6 +5,7 @@ use Illuminate\Support\Facades\Route;
 
 Route::post("/staff/login","App\Http\Controllers\Auth\LoginController@login");
 Route::get("/carts", 'App\Http\Controllers\v1\CartController@index');
+Route::post('/sales','App\Http\Controllers\v1\SalesController@store');
 
 Route::group(["prefix"=>"v1"], function(){
     Route::group(["prefix"=>"staff", "middleware"=>['assign.guard:staff','jwt.auth']], function(){
